tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_wrong_method_return_type2/execute__tests__noirc_frontend_tests_check_trait_wrong_method_return_type2_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type Foo, found type Field
   ┌─ src/main.nr:12:44
   │
12 │         fn default(x: Field, _y: Field) -> Field {
   │                                            -----
   │

Aborting due to 1 previous error
